--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 var namMember = new Array(
 
 "<br>Sweet Tweet</br>",
-"<br>コーヒーとシロップ(커피와 시럽)</br>",
+"<br>コーヒーとシロップ<br>(커피와 시럽)</br>",
 "<br>What's Going On?</br>",
-"<br>犬かキャットかで死ぬまで喧嘩しよう！(개냐 고양이냐로 죽을 때까지 싸우자!)</br>",
-"<br>１１５万キロのフィルム(115만 킬로의 필름)</br>",
-"<br>ノーダウト(No Doubt)</br>",
-"<br>バッドフォーミ-(Bad For Me)</br>",
+"<br>犬かキャットかで死ぬまで喧嘩しよう！<br>(개냐 고양이냐로 죽을 때까지 싸우자!)</br>",
+"<br>１１５万キロのフィルム<br>(115만 킬로의 필름)</br>",
+"<br>ノーダウト<br>(No Doubt)</br>",
+"<br>バッドフォーミー<br>(Bad For Me)</br>",
 "<br>Stand By You</br>",
 "<br>Pretender</br>",
-"<br>宿命(숙명)</br>",
-"<br>イエスタデイ(Yesterday)</br>",
+"<br>宿命<br>(숙명)</br>",
+"<br>イエスタデイ<br>(Yesterday)</br>",
 "<br>I Love…</br>",
 "<br>Parabola</br>",
 "<br>HELLO</br>",
 "<br>Laughter</br>",
 "<br>Universe</br>",
 "<br>Cry Baby</br>",
-"<br>アポトーシス(Apoptosis)</br>",
+"<br>アポトーシス<br>(Apoptosis)</br>",
 "<br>Editorial</br>",
 "<br>Anarchy</br>",
-"<br>ミックスナッツ(Mixed Nuts)</br>",
+"<br>ミックスナッツ<br>(Mixed Nuts)</br>",
 "<br>Subtitle</br>",
-"<br>ホワイトノイズ(White Noise)</br>",
+"<br>ホワイトノイズ<br>(White Noise)</br>",
 "<br>TATTOO</br>",
 "<br>Chessboard</br>",
-"<br>日常(일상)</br>",
+"<br>日常<br>(일상)</br>",
 "<br>SOULSOUP</br>",
 
 
