--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ var namMember = new Array(
 "<br>宿命<br>(숙명)</br>",
 "<br>イエスタデイ<br>(Yesterday)</br>",
 "<br>I Love…</br>",
-"<br>Parabola</br>",
+"<br>パラボラ<br>(Parabola)</br>",
 "<br>HELLO</br>",
 "<br>Laughter</br>",
 "<br>Universe</br>",
