--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ var namMember = new Array(
 "<br>Chessboard</br>",
 "<br>日常<br>(일상)</br>",
 "<br>SOULSOUP</br>",
+"<br>Sharon</br>",
+"<br>50%</br>",
 
 
 
